--- a/BLS_Project.ipynb
+++ b/BLS_Project.ipynb
@@ -295,7 +295,7 @@
     "    plt.title(f'Representation of Women and Minorities in {level} Jobs, 2010 - 2019 \\n', fontsize=14)\n",
     "    plt.xticks(np.arange(2011,2021,2))\n",
     "\n",
-    "    plt.savefig(f\"templates/Images/{level}_ten_year_graph.png\")\n",
+    "    plt.savefig(f\"Images/{level}_ten_year_graph.png\")\n",
     "    "
    ]
   },
@@ -640,7 +640,7 @@
     "    plt.xticks(np.arange(2021,2031,2))\n",
     "    plt.title(f\"Forecast Representation in {level} Jobs, 2020-2029 \\n\", fontsize=14)\n",
     "\n",
-    "    plt.savefig(f\"templates/Images/{level}_forecast_graph.png\")  \n",
+    "    plt.savefig(f\"Images/{level}_forecast_graph.png\")  \n",
     "    \n",
     " "
    ]
@@ -829,7 +829,7 @@
     "plt.xticks(rotation = 20)\n",
     "plt.ylim(0,165)\n",
     "\n",
-    "plt.savefig(\"templates/Images/bar_advratio2010\")\n"
+    "plt.savefig(\"Images/bar_advratio2010\")\n"
    ]
   },
   {
@@ -1003,7 +1003,7 @@
     "plt.ylim(0,165)\n",
     "plt.xlim(-.09,2.8)\n",
     "\n",
-    "plt.savefig(\"templates/Images/bar_advratio2019\")\n",
+    "plt.savefig(\"Images/bar_advratio2019\")\n",
     "\n"
    ]
   },
@@ -1181,7 +1181,7 @@
     "plt.ylim(0,230)\n",
     "plt.xlim(-.09,2.8)\n",
     "\n",
-    "plt.savefig(\"templates/Images/bar_advratio2029\")\n",
+    "plt.savefig(\"Images/bar_advratio2029\")\n",
     "\n"
    ]
   },
@@ -1396,7 +1396,7 @@
     "plt.ylim(-8,70)\n",
     "plt.xlim(-.09,2.8)\n",
     "\n",
-    "plt.savefig(\"templates/Images/bar_ratiochange_2019\")\n"
+    "plt.savefig(\"Images/bar_ratiochange_2019\")\n"
    ]
   },
   {
@@ -1465,7 +1465,7 @@
     "plt.ylim(-8,70)\n",
     "plt.xlim(-.09,2.8)\n",
     "\n",
-    "plt.savefig(\"templates/Images/bar_ratiochange_2029\")\n"
+    "plt.savefig(\"Images/bar_ratiochange_2029\")\n"
    ]
   },
   {
@@ -1500,7 +1500,7 @@
     "    plt.xticks(rotation = 20)\n",
     "    plt.ylim(ylim1,ylim2)\n",
     "\n",
-    "    plt.savefig(f\"templates/Images/{group}_ratio_change19.png\")\n"
+    "    plt.savefig(f\"Images/{group}_ratio_change19.png\")\n"
    ]
   },
   {
@@ -1547,7 +1547,7 @@
     "    plt.xticks(rotation = 20)\n",
     "    plt.ylim(ylim1,ylim2)\n",
     "\n",
-    "    plt.savefig(f\"templates/Images/{group}_ratio_change29.png\")\n"
+    "    plt.savefig(f\"Images/{group}_ratio_change29.png\")\n"
    ]
   },
   {
@@ -1670,7 +1670,7 @@
     "  \n",
     "    plt.legend()\n",
     "   \n",
-    "    plt.savefig(f\"templates/Images/{group}_twenty_year_graph.png\")\n"
+    "    plt.savefig(f\"Images/{group}_twenty_year_graph.png\")\n"
    ]
   },
   {
@@ -1749,7 +1749,7 @@
     "  \n",
     "plt.legend()\n",
     "   \n",
-    "plt.savefig(f\"templates/Images/white_thirteen_year_graph.png\")\n"
+    "plt.savefig(f\"Images/white_thirteen_year_graph.png\")\n"
    ]
   },
   {
@@ -1776,7 +1776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
