--- a/BLS_Project.ipynb
+++ b/BLS_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Demographic</th>\n",
+       "      <th>Total, 16 years and over</th>\n",
+       "      <th>Management &amp; Professional Occupations</th>\n",
+       "      <th>Management Occupations</th>\n",
+       "      <th>Chief Executives</th>\n",
+       "      <th>Professional Occupations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>% Latinx 2010</td>\n",
+       "      <td>14.300000</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>% Latinx 2011</td>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>7.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>% Latinx 2012</td>\n",
+       "      <td>15.400000</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>% Latinx 2013</td>\n",
+       "      <td>15.600000</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>% Latinx 2014</td>\n",
+       "      <td>16.100000</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>8.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>% Latinx 2015</td>\n",
+       "      <td>16.400000</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>8.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>% Latinx 2016</td>\n",
+       "      <td>16.700001</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>% Latinx 2017</td>\n",
+       "      <td>16.900000</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>% Latinx 2018</td>\n",
+       "      <td>17.299999</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>9.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>% Latinx 2019</td>\n",
+       "      <td>17.600000</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Demographic  Total, 16 years and over  \\\n",
+       "0  % Latinx 2010                 14.300000   \n",
+       "1  % Latinx 2011                 14.500000   \n",
+       "2  % Latinx 2012                 15.400000   \n",
+       "3  % Latinx 2013                 15.600000   \n",
+       "4  % Latinx 2014                 16.100000   \n",
+       "5  % Latinx 2015                 16.400000   \n",
+       "6  % Latinx 2016                 16.700001   \n",
+       "7  % Latinx 2017                 16.900000   \n",
+       "8  % Latinx 2018                 17.299999   \n",
+       "9  % Latinx 2019                 17.600000   \n",
+       "\n",
+       "   Management & Professional Occupations  Management Occupations  \\\n",
+       "0                                    7.3                     7.6   \n",
+       "1                                    7.5                     7.7   \n",
+       "2                                    8.4                     8.8   \n",
+       "3                                    8.3                     8.5   \n",
+       "4                                    8.7                     9.1   \n",
+       "5                                    9.1                     9.7   \n",
+       "6                                    9.3                     9.9   \n",
+       "7                                    9.6                     9.9   \n",
+       "8                                    9.7                    10.3   \n",
+       "9                                   10.1                    10.7   \n",
+       "\n",
+       "   Chief Executives  Professional Occupations  \n",
+       "0               4.8                       7.1  \n",
+       "1               4.1                       7.4  \n",
+       "2               4.7                       8.2  \n",
+       "3               4.3                       8.2  \n",
+       "4               4.7                       8.6  \n",
+       "5               5.5                       8.8  \n",
+       "6               5.6                       9.0  \n",
+       "7               4.7                       9.3  \n",
+       "8               6.1                       9.6  \n",
+       "9               6.2                       9.9  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latinx_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,6 +874,96 @@
     "    ratio2010_df.loc[i,\"CEOs\"] = (advratio_ceos_2010[i]*100).round(1)\n",
     "    ratio2010_df.loc[i,\"Profs\"] = (advratio_profs_2010[i]*100).round(1)\n",
     "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Mgrs</th>\n",
+       "      <th>Profs</th>\n",
+       "      <th>CEOs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Women</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>121.6</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>African-Americans</td>\n",
+       "      <td>59.3</td>\n",
+       "      <td>85.2</td>\n",
+       "      <td>25.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Asians</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>145.8</td>\n",
+       "      <td>66.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Latinx</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>49.7</td>\n",
+       "      <td>33.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Men</td>\n",
+       "      <td>117</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>141.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Group  Mgrs  Profs   CEOs\n",
+       "0              Women  80.9  121.6     54\n",
+       "1  African-Americans  59.3   85.2   25.9\n",
+       "2             Asians  91.7  145.8   66.7\n",
+       "3             Latinx  53.1   49.7   33.6\n",
+       "4                Men   117   80.7  141.1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio2010_df.head()"
    ]
   },
   {
@@ -783,97 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Group</th>\n",
-       "      <th>Mgrs</th>\n",
-       "      <th>Profs</th>\n",
-       "      <th>CEOs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Women</td>\n",
-       "      <td>85.1</td>\n",
-       "      <td>122.1</td>\n",
-       "      <td>58.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>African-Americans</td>\n",
-       "      <td>63.4</td>\n",
-       "      <td>85.4</td>\n",
-       "      <td>33.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Asians</td>\n",
-       "      <td>93.8</td>\n",
-       "      <td>153.8</td>\n",
-       "      <td>89.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Latinx</td>\n",
-       "      <td>60.8</td>\n",
-       "      <td>56.2</td>\n",
-       "      <td>35.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Men</td>\n",
-       "      <td>113.2</td>\n",
-       "      <td>80.4</td>\n",
-       "      <td>136.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Group   Mgrs  Profs   CEOs\n",
-       "0              Women   85.1  122.1   58.7\n",
-       "1  African-Americans   63.4   85.4   33.3\n",
-       "2             Asians   93.8  153.8   89.2\n",
-       "3             Latinx   60.8   56.2   35.2\n",
-       "4                Men  113.2   80.4  136.6"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratio2010_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1178,7 @@
        "5             Whites  107.6   98.7  114.3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1200,7 @@
     "    ratio2019_df.loc[i,\"CEOs\"] = (advratio_ceos_2019[i]*100).round(1)\n",
     "    ratio2019_df.loc[i,\"Profs\"] = (advratio_profs_2019[i]*100).round(1)\n",
     "    i+=1\n",
-    "    \n"
+    "    "
    ]
   },
   {
